--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "ما هو الدعم الذكي",
     "smart_support_l_m": "تعرف على المزيد حول الميزات الرئيسية للدعم الذكي",
     "smart_energy_helps": "تساعدك الطاقة الذكية على مراقبة الأجهزة والحفاظ عليها في حالة كفاءة في استخدام الطاقة",
-    "smart_energy_helps_1": "1. نقرة واحدة صديقة للبيئة",
     "smart_energy_helps_1_content": "قم بتنشيط وضع ECO لأجهزتك. قم بتحليل استهلاك الطاقة في الجهاز إحصائيًا. راقب بيانات توفير الطاقة وحدد هدف استخدام الطاقة.",
     "smart_energy_helps_2": "2. مراقبة استهلاك الطاقة",
     "smart_energy_helps_2_content": "احسب استهلاك الطاقة والمياه لكامل المنزل على أساس يومي وشهري وسنوي. كما يمكنك أيضًا عرض إحصائيات الاستهلاك للأجهزة الفردية، ونسبة استهلاك الطاقة لكل جهاز خلال الفترة المحددة، والاستهلاك الكلي والفردي للطاقة.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "تأكد من أن خزانتك متصلة بشبكة لاسلكية محلية.",
     "CL_DV_WM_offline_content3": "تحقق من قوة إشارة الواي فاي الخاصة بك. إذا كانت الإشارة ضعيفة، فقد يكون الراوتر بعيدًا جدًا عن الخزانة.",
     "CL_DV_WM_offline_title": "جهازك غير متصل بالإنترنت",
-    "CL_CF_FM_create_recipe": "إنشاء الوصفة"
+    "CL_CF_FM_create_recipe": "إنشاء الوصفة",
+    "CL_DV_HOB_operation_interval": "فترة التشغيل",
+    "CL_DV_WM_hot": "حار",
+    "CL_DV_WM_extra_hot": "ساخن جدا",
+    "CL_CF_HP_card": "بطاقة",
+    "CL_CF_HP_enter_card_name": "أدخل اسم البطاقة...",
+    "smart_energy_helps_1": ""
 }
