--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Какво е Smart Support",
     "smart_support_l_m": "Научете повече за основните характеристики на Smart Support",
     "smart_energy_helps": "Smart Energy ви помага да наблюдавате и поддържате устройствата в енергийно ефективно състояние",
-    "smart_energy_helps_1": "1.Еко с едно щракване",
     "smart_energy_helps_1_content": "Активен ECO режим на вашите уреди. Статистически анализира консумацията на енергия на устройството. Наблюдавайте данните за пестене на енергия и задайте цел за потребление на енергия.",
     "smart_energy_helps_2": "2. Мониторинг на потреблението на енергия",
     "smart_energy_helps_2_content": "Изчислете потреблението на енергия и вода за цялата къща на дневна, месечна и годишна база. можете също да видите статистиката за потреблението на отделните устройства, съотношението на потреблението на енергия на всяко устройство в рамките на избрания период, общото и индивидуалното потребление на енергия.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Уверете се, че шкафът ви е свързан към местна безжична мрежа.",
     "CL_DV_WM_offline_content3": "Проверете силата на WiFi сигнала. Ако сигналът е слаб, може би рутерът е твърде далеч от шкафа.",
     "CL_DV_WM_offline_title": "Вашето устройство е офлайн",
-    "CL_CF_FM_create_recipe": "Създайте рецепта"
+    "CL_CF_FM_create_recipe": "Създайте рецепта",
+    "CL_DV_HOB_operation_interval": "Операционен интервал",
+    "CL_DV_WM_hot": "Горещо",
+    "CL_DV_WM_extra_hot": "Изключително горещ",
+    "CL_CF_HP_card": "карта",
+    "CL_CF_HP_enter_card_name": "Въведете име на картата...",
+    "smart_energy_helps_1": ""
 }
