--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -3004,7 +3004,7 @@
     "how_many_rooms_in_this_floor_key": "Wie viele Zimmer gibt es in Ihrem Haus?",
     "drag_and_drop_rooms": "Drag & Drop von Räumen...",
     "manage_3d_room_tip": "Drücke und ziehe Räume an die richtige Position",
-    "room_type_key": "Zimmertyp",
+    "room_type_key": "Raum",
     "select_room_type_for_existing_rooms": "Wählen Sie den Zimmertyp für bestehende Zimmer aus",
     "edit_device_key": "Gerät bearbeiten",
     "change_room_key": "Umkleidekabine",
@@ -4224,7 +4224,7 @@
     "CL_DV_OV_add_stage": "Phase hinzufügen",
     "CL_DV_OV_stage": "Bühne",
     "CL_DV_HOB_sensitivity_level": "Empfindlichkeitsstufe der automatischen Haube",
-    "CL_DV_HOB_hood_title": "Haube",
+    "CL_DV_HOB_hood_title": "Dunstabzugshaube",
     "CL_CF_FM_food_inventory": "Lebensmittelinventar",
     "p_check_email": "Bitte überprüfen Sie Ihre E-Mail",
     "CL_CF_FM_storage_appliance": "Speichergerät",
@@ -4386,7 +4386,7 @@
     "CL_CF_CM_Paired_users": "gepaarte Benutzer",
     "CL_CF_CS_atw_cs_2": "Drücken Sie die Menütaste, um die Menüliste aufzurufen.",
     "CL_CF_CS_atw_cs_3": "Wähle WLAN aus und drücke dann die mittlere Taste, um die WLAN-Konfiguration zu starten. Das WLAN-Symbol beginnt nun zu blinken.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW Wärmepumpe",
+    "CL_CF_CM_sun_rain_atw_name": "Luft/Wasser Wärmepumpe",
     "CL_DV_OV_continue_keep_warm_desc": "Planen Sie zusätzliche Zeit ein, um Ihr Essen warm zu halten.",
     "CL_DV_OV_continue_fast_cool_desc": "Den Backofen so schnell wie möglich abkühlen lassen.",
     "CL_DV_OV_continue_reduces_desc": "Reduziert die verbleibende Feuchtigkeit nach dem Kochen.",
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Was ist Smart Support",
     "smart_support_l_m": "Erfahren Sie mehr über die wichtigsten Funktionen von Smart Support",
     "smart_energy_helps": "Smart Energy hilft Ihnen, Geräte zu überwachen und in einem energieeffizienten Zustand zu halten",
-    "smart_energy_helps_1": "1.Ein-Klick-Öko",
     "smart_energy_helps_1_content": "Aktivieren Sie den Öko-Modus Ihrer Geräte. Analysieren Sie den Energieverbrauch der Geräte statistisch. Überwachen Sie Energiespardaten und legen Sie Energienutzungsziele fest.",
     "smart_energy_helps_2": "2. Überwachung des Energieverbrauchs",
     "smart_energy_helps_2_content": "Berechnen Sie den Strom- und Wasserverbrauch des gesamten Hauses auf Tages-, Monats- und Jahresbasis. Sie können auch die Verbrauchsstatistiken einzelner Geräte, den Anteil des Energieverbrauchs jedes Geräts innerhalb des ausgewählten Zeitraums sowie den Gesamt- und Einzelenergieverbrauch anzeigen.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Stellen Sie sicher, dass Ihr Schrank mit einem lokalen WLAN-Netzwerk verbunden ist.",
     "CL_DV_WM_offline_content3": "Überprüfen Sie die Stärke Ihres WLAN-Signals. Wenn das Signal schwach ist, könnte es sein, dass der Router zu weit vom Schrank entfernt ist.",
     "CL_DV_WM_offline_title": "Ihr Gerät ist offline",
-    "CL_CF_FM_create_recipe": "Rezept erstellen"
+    "CL_CF_FM_create_recipe": "Rezept erstellen",
+    "CL_DV_HOB_operation_interval": "Betriebsintervall",
+    "CL_DV_WM_hot": "Heiß",
+    "CL_DV_WM_extra_hot": "Extra scharf",
+    "CL_CF_HP_card": "Karte",
+    "CL_CF_HP_enter_card_name": "Geben Sie den Kartennamen ein ...",
+    "smart_energy_helps_1": ""
 }
