--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -129,10 +129,10 @@
     "app_update_update": "ΕΝΗΜΕΡΩΣΗ",
     "app_update_later": "ΑΡΓΟΤΕΡΑ",
     "app_update_do_not_ask_me_again": "Να μην ερωτηθώ ξανά",
-    "ac_separated_air_conditioner": "Κλιματιστικό με εξωτερική μονάδα (τύπου split)",
-    "ac_mobile_air_conditioner": "Φορητό κλιματιστικό",
-    "ac_commercial_air_conditioner": "Εμπορικό κλιματιστικό",
-    "ac_window_machine": "Κλιματιστικό παραθύρου",
+    "ac_separated_air_conditioner": "Οικιακό Κλιματιστικό",
+    "ac_mobile_air_conditioner": "Φορητό Κλιματιστικό",
+    "ac_commercial_air_conditioner": "Επαγγελματικό Κλιματιστικό",
+    "ac_window_machine": "Κλιματιστικό Παραθύρου",
     "ac_dehumidifier": "Αφυγραντήρας",
     "ac_unconnected": "ΜΗ ΣΥΝΔΕΔΕΜΕΝΟ",
     "ac_temperature": "ΘΕΡΜΟΚΡΑΣΙΑ",
@@ -293,7 +293,7 @@
     "pind_off": "ΑΠΕΝΕΡΓΟΠΟΙΗΣΗ",
     "pind_induction_hob": "Επαγωγική εστία",
     "scene_name_not_more_25_length": "όνομα σκηνής μήκος όχι μεγαλύτερο από 25",
-    "washing_type": "Πλυντήριο ρούχων",
+    "washing_type": "Πλυντήριο Ρούχων",
     "drayer_type": "Στεγνωτήριο",
     "location": "ΤΟΠΟΘΕΣΙΑ",
     "setting_appliance_no_name": "Εισαγάγετε το όνομα της συσκευής",
@@ -364,7 +364,7 @@
     "auto_scene_no_triggers": "επιλέξτε κάποιους ενεργοποιητές",
     "auto_scene_no_actions": "επιλέξτε μερικές ενέργειες",
     "scene_name_not_less_2_length": "όνομα σκηνής μήκος όχι μικρότερο από 2",
-    "cooler_type": "Ψύκτης κρασιού",
+    "cooler_type": "Συντηρητής Κρασιού",
     "add_appliance_name_too_long": "το όνομα της συσκευής είναι πολύ μεγάλο",
     "add_appliance_ssid_null": "το ssid δεν μπορεί να είναι μηδενικό",
     "add_appliance_no_wifi_name": "δεν υπάρχει το όνομα Wi-Fi που εισαγάγατε",
@@ -502,7 +502,7 @@
     "extra_dry": "Επιπλέον στεγνό",
     "duration": "Διάρκεια",
     "temperature_unit": "℃",
-    "dishwasher_type": "Απορροφητήρας",
+    "dishwasher_type": "Πλυντήριο Πιάτων",
     "oven_pro_bake": "πίνακα ελέγχου",
     "oven_browse_recipes": "Περιηγηθείτε στις συνταγές",
     "bake_step_title": "πίνακα ελέγχου",
@@ -688,7 +688,7 @@
     "clean_filter_overdue": "Καθαρισμός φίλτρου έχει καθυστερήσει",
     "clean_filter_in": "Καθαρίστε το φίλτρο μέσα",
     "carbon_filter": "ΦΙΛΤΡΟ ΑΝΘΡΑΚΑ",
-    "hood_atag": "Κουκούλα",
+    "hood_atag": "Απορροφητήρας",
     "check_ticket_device": "Επιλέξτε τη συσκευή με το πρόβλημα",
     "check_ticket_content": "Παρακαλούμε εισάγετε το περιεχόμενο του εισιτηρίου",
     "check_ticket_title": "Εισαγάγετε τον τίτλο του εισιτηρίου",
@@ -722,7 +722,7 @@
     "dw_config_wifi_step4_pair": "Επιβεβαιώστε το μήνυμα \"Παρακαλώ κατεβάστε την εφαρμογή. Πατήστε το μενού για να ξεκινήσετε.\" Το δίκτυο αυτής της συσκευής είναι πλέον ανοιχτό για σύνδεση, για 2 λεπτά. Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
     "hood_config_wifi_step3_pair_new": "Πατήστε και κρατήστε πατημένο το πλήκτρο — και το πλήκτρο + ταυτόχρονα για περίπου 3 δευτερόλεπτα.",
     "atag_hood_type1_wifi_step2_wifioff": "Εάν το Wi-Fi είναι ενεργοποιημένο, μπορείτε να παραλείψετε αυτό το βήμα. \nΑγγίξτε παρατεταμένα το πλήκτρο - (μείον) και το πλήκτρο χρονοδιακόπτη ταυτόχρονα για περίπου 3 δευτερόλεπτα για να ενεργοποιήσετε το Wi-Fi.",
-    "refrigerator": "Εστία",
+    "refrigerator": "Ψυγείο",
     "bake_baking_stopped": "Το ψήσιμο σταμάτησε",
     "hisrf_view_inside": "Θέα στο εσωτερικό",
     "hisrf_shopping_list": "Λίστα με τα ψώνια",
@@ -820,7 +820,7 @@
     "send_email": "να στείλετε e-mail",
     "send_email_success": "στείλε επιτυχία",
     "send_email_fail": "αποστολή αποτύχει",
-    "hisense_wm_type": "Πλυντήριο",
+    "hisense_wm_type": "Πλυντήριο Ρούχων",
     "hisenserf_opendoor_unit": "Τιμή",
     "shopping_list_add_fail": "Η τροποποίηση της λίστας αγορών απέτυχε!",
     "recipes_hide_hint": "Απόκρυψη συνταγών με τα ακόλουθα αλλεργιογόνα",
@@ -1553,7 +1553,7 @@
     "remove_or_unplaced_wine_cabinet_tips": "Το κρασί που έχει αφαιρεθεί ή δεν έχει τοποθετηθεί δεν μπορεί να εμφανιστεί στο μοντέλο του ντουλαπιού",
     "add_appliance_new": "Προσθήκη συσκευής",
     "failed_to_obtain_manual": "Αποτυχία λήψης εγχειριδίου",
-    "add_appliance_3_zone_wine_climate_cabinet": "Ντουλάπι κρασιού 3 Ζώνης",
+    "add_appliance_3_zone_wine_climate_cabinet": "Συντηρητής Κρασιού 3πλης Ζώνης",
     "turn_on_the_remote": "Παρακαλώ ενεργοποιήστε το τηλεχειριστήριο στη συσκευή.",
     "d_temperature_unit": "ΜΟΝΑΔΑ ΘΕΡΜΟΚΡΑΣΙΑΣ",
     "d_time_format": "ΜΟΡΦΗ ΩΡΑΣ",
@@ -1667,7 +1667,7 @@
     "alarm_mute": "Σίγαση συναγερμού",
     "contact_service": "Επικοινωνήστε με την εξυπηρέτηση πελατών για σχετικές υπηρεσίες σύμφωνα με το έντυπο περιεχόμενο των στοιχείων επικοινωνίας της εξυπηρέτησης πελατών.",
     "oven": "Φούρνος",
-    "hob": "Τελώνιο",
+    "hob": "Εστία",
     "tumble_dryer": "Στεγνωτήριο",
     "pro_series": "Σειρά PRO",
     "setting_no": "Κανένα",
@@ -1676,7 +1676,7 @@
     "add_timing": "ΠΡΟΣΘΗΚΗ ΧΡΟΝΟΜΕΤΡΗΣΗΣ",
     "set_start_to_finish_time": "Ορίστε την ώρα έναρξης και λήξης",
     "pair_pump_appliance": "Θερμαντήρας νερού με αντλία θερμότητας",
-    "heat_pump": "Πλακέτα inverter",
+    "heat_pump": "Ζεστό Νερό Χρήσης Inverter",
     "pump_boost_1": "Ενίσχυση 1",
     "pump_electric_heating": "Ηλεκτρική θέρμανση",
     "pump_holiday_mode": "Διακοπές",
@@ -2253,7 +2253,7 @@
     "offline_help_desc": "Συνδεδεμένο και ενεργοποιημένο;\nΤο Wi-Fi είναι ενεργοποιημένο και συνδεδεμένο;\nΟ κωδικός πρόσβασης Wi-Fi δεν έχει αλλάξει πρόσφατα.",
     "dont_remind_again_uppercase": "ΜΗΝ ΘΥΜΙΣΟΥΜΕ ΞΑΝΑ",
     "storage_tips_title": "Συμβουλές αποθήκευσης:",
-    "heat_pump_oem": "Ζεστό νερό χρήσης σταθερής ταχύτητας",
+    "heat_pump_oem": "Ζεστό Νερό Χρήσης Σταθερής Ταχύτητας",
     "td22_drying_empty_water_tank": "Στέγνωμα – Άδειο δοχείο νερού",
     "td22_drying_paused": "Το στέγνωμα σταμάτησε",
     "td22_drying_finished": "Το στέγνωμα ολοκληρώθηκε",
@@ -2430,7 +2430,7 @@
     "logout_tips": "Είστε βέβαιοι ότι θέλετε να αποσυνδεθείτε?",
     "fridge_child_lock_open_tips": "Αφού ανοίξει το κλείδωμα για παιδιά, η οθόνη αφής και ο διανομέας θα κλειδωθούν.",
     "want_scan_code_tips": "Θέλω να σαρώσω τον κώδικα.",
-    "tri_name_key": "Αντλία θερμότητας ATW Pro",
+    "tri_name_key": "Αντλία Θερμότητας ATW Pro",
     "water_set_key": "ΘΕΡΜΟΚΡΑΣΙΑ ΝΕΡΟΥ",
     "f_e_fan_fault_tip": "Αποτυχία ανεμιστήρα DC",
     "zone_water_key": "Ζώνη 1 Νερό",
@@ -2538,7 +2538,7 @@
     "device_all_notification_tips": "Θα λαμβάνετε όλες τις ενημερώσεις που σχετίζονται με τη συσκευή, τις ειδοποιήσεις που απαιτούν την προσοχή σας, τις ειδοποιήσεις μάρκετινγκ και οποιεσδήποτε άλλες σχετικές ειδοποιήσεις εντός του ConnectLife.",
     "device_urgent_nmotification_tips": "Θα λαμβάνετε μόνο εκείνες τις ειδοποιήσεις που απαιτούν άμεση προσοχή. Αυτή η ρύθμιση διασφαλίζει ότι ενημερώνεστε άμεσα για κρίσιμες ενημερώσεις και θέματα που είναι ευαίσθητα στον χρόνο.",
     "device_none_notification_tips": "Δεν θα λαμβάνετε ειδοποιήσεις, συμπεριλαμβανομένων όλων των ενημερώσεων που σχετίζονται με τη συσκευή, καθώς και των επειγουσών ειδοποιήσεων που απαιτούν άμεση προσοχή.",
-    "ac_duct_type": "Κλιματιστικό τύπου αγωγού",
+    "ac_duct_type": "Κλιματιστικό Τύπου Αγωγού",
     "duct_silent": "Σιωπηλός",
     "timer_name_not_less_2_length": "όνομα χρονοδιακόπτη όχι μικρότερο 2 μήκους",
     "push_notifications_settings_tips": "Λάβετε ειδοποιήσεις και ειδοποιήσεις ως ειδοποιήσεις push στο τηλέφωνό σας, ακόμη και όταν δεν χρησιμοποιείτε ενεργά την εφαρμογή ConnectLife.",
@@ -2931,7 +2931,7 @@
     "error_cause_missing_data": "Παρουσιάστηκε σφάλμα στη συσκευή. Αυτό μπορεί να προκαλέσει απώλεια δεδομένων.",
     "water_drain": "Αποχέτευση νερού",
     "tank": "Δεξαμενή",
-    "smart_tv": "Εξυπνη τηλεόραση",
+    "smart_tv": "Τηλεόραση",
     "add_tv_step_1": "Ενεργοποιήστε την τηλεόραση και βεβαιωθείτε ότι το τηλέφωνό σας είναι στο ίδιο LAN με την τηλεόραση.",
     "searching_for_device": "Αναζήτηση Συσκευής…",
     "searching_for_device_tips": "Περιμένετε να εμφανιστεί ο τετραψήφιος κωδικός ζεύγους στην οθόνη της τηλεόρασής σας.",
@@ -3445,7 +3445,7 @@
     "wash_dry_instruction": "Με ενεργοποιημένη τη λειτουργία WashDry Sync, το πρόγραμμα πλύσης σας μεταφέρεται στο επιλεγμένο στεγνωτήριο μετά την ολοκλήρωση της πλύσης.",
     "appliance_is_not_standby": "Η συσκευή χρησιμοποιείται αυτήν τη στιγμή",
     "appliance_is_not_standby_desc": "Για να μπορείτε να κάνετε αλλαγές στα προγράμματα, βεβαιωθείτε ότι η συσκευή βρίσκεται είτε σε κατάσταση αναμονής είτε απενεργοποιημένη.",
-    "dev_inverter": "Αντιστροφέας",
+    "dev_inverter": "Inverter",
     "how_to": "Πώς να ;",
     "follow_these_steps": "Ακολουθήστε αυτά τα βήματα για να φτιάξετε την καλύτερη πίτσα.",
     "select_the_type_of_pizza": "Επιλέξτε τον τύπο πίτσας που θέλετε να ετοιμάσετε.",
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Τι είναι η Έξυπνη Υποστήριξη",
     "smart_support_l_m": "Μάθετε περισσότερα σχετικά με τις βασικές δυνατότητες της Έξυπνης Υποστήριξης",
     "smart_energy_helps": "Το Smart Energy σάς βοηθά να παρακολουθείτε και να διατηρείτε τις συσκευές σε ενεργειακά αποδοτική κατάσταση",
-    "smart_energy_helps_1": "1.Eco με ένα κλικ",
     "smart_energy_helps_1_content": "Ενεργή λειτουργία ECO των συσκευών σας. Αναλύστε στατιστικά την κατανάλωση ενέργειας της συσκευής. Παρακολούθηση δεδομένων εξοικονόμησης ενέργειας και Ορισμός στόχου χρήσης ενέργειας.",
     "smart_energy_helps_2": "2.Παρακολούθηση Κατανάλωσης Ενέργειας",
     "smart_energy_helps_2_content": "Υπολογίστε την κατανάλωση ενέργειας και νερού ολόκληρου του σπιτιού σε ημερήσια, μηνιαία και ετήσια βάση. μπορείτε επίσης να δείτε τα στατιστικά στοιχεία κατανάλωσης μεμονωμένων συσκευών, το ποσοστό κατανάλωσης ενέργειας κάθε συσκευής εντός της επιλεγμένης περιόδου, τη συνολική και μεμονωμένη κατανάλωση ενέργειας.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Βεβαιωθείτε ότι ο ντουλάπι σας είναι συνδεδεμένος σε ένα τοπικό ασύρματο δίκτυο.",
     "CL_DV_WM_offline_content3": "Ελέγξτε την ισχύ του σήματος WiFi. Εάν το σήμα είναι ασθενές, μπορεί να οφείλεται στο γεγονός ότι ο δρομολογητής είναι πολύ μακριά από το ντουλάπι.",
     "CL_DV_WM_offline_title": "Η συσκευή σας είναι εκτός σύνδεσης",
-    "CL_CF_FM_create_recipe": "Δημιουργήστε συνταγή"
+    "CL_CF_FM_create_recipe": "Δημιουργήστε συνταγή",
+    "CL_DV_HOB_operation_interval": "Διάστημα λειτουργίας",
+    "CL_DV_WM_hot": "Καυτό",
+    "CL_DV_WM_extra_hot": "Εξαιρετικά ζεστό",
+    "CL_CF_HP_card": "Κάρτα",
+    "CL_CF_HP_enter_card_name": "Εισαγάγετε το όνομα της κάρτας...",
+    "smart_energy_helps_1": ""
 }
