--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "מהי תמיכה חכמה",
     "smart_support_l_m": "למידע נוסף על תכונות מפתח של תמיכה חכמה",
     "smart_energy_helps": "Smart Energy עוזרת לך לנטר ולשמור על מכשירים במצב חסכוני באנרגיה",
-    "smart_energy_helps_1": "1. Eco בלחיצה אחת",
     "smart_energy_helps_1_content": "מצב ECO אקטיבי של המכשירים שלך. ניתוח סטטיסטי של צריכת האנרגיה של המכשיר. מעקב אחר נתוני חיסכון באנרגיה והגדר יעד שימוש באנרגיה.",
     "smart_energy_helps_2": "2. ניטור צריכת אנרגיה",
     "smart_energy_helps_2_content": "חשב את כל צריכת החשמל והמים של הבית על בסיס יומי, חודשי ושנתי. אתה יכול גם להציג את סטטיסטיקת הצריכה של מכשירים בודדים, שיעור צריכת האנרגיה של כל מכשיר בתקופה שנבחרה, צריכת האנרגיה הכוללת והפרטית.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "ודא שהארון שלך מחובר לרשת אלחוטית מקומית.",
     "CL_DV_WM_offline_content3": "בדוק את חוזק האות האלחוטי של ה-WiFi. אם האות חלש, ייתכן שהראוטר נמצא רחוק מדי מהארון.",
     "CL_DV_WM_offline_title": "המכשיר שלך במצב לא מקוון",
-    "CL_CF_FM_create_recipe": "צור מתכון"
+    "CL_CF_FM_create_recipe": "צור מתכון",
+    "CL_DV_HOB_operation_interval": "מרווח פעולה",
+    "CL_DV_WM_hot": "חַם",
+    "CL_DV_WM_extra_hot": "חם במיוחד",
+    "CL_CF_HP_card": "כַּרְטִיס",
+    "CL_CF_HP_enter_card_name": "הזן את שם הכרטיס...",
+    "smart_energy_helps_1": ""
 }
