--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -2189,7 +2189,7 @@
     "add_a_schedule": "スケジュール追加",
     "exam_again": "再診断",
     "ac_new_temperature_unit": "温度単位",
-    "ac_manual_examination_new": "自己診断",
+    "ac_manual_examination_new": "診断機能",
     "contact_service_new": "製品に関するお問い合わせ、またはサービス部品やアフターサービスをお求めになる場合、弊社のコールセンターにお問い合わせください。\n\n米国にお住まいの場合は、カスタマー サポート チーム（1-877-465-3566）までご連絡ください。\n\nその他の国（地域）の場合は、コールセンターの連絡先が取扱説明書に記載されておりますのでご確認ください。",
     "bucket_full_title": "水バケツを確認してください",
     "bucket_full_content": "1. 水バケツが正しく取り付けられていることを確認します。\n2. いっぱいの場合は、空にして再取り付けします。",
@@ -3322,7 +3322,7 @@
     "indoor_co2_concentration": "室内 CO2 濃度",
     "comfortable": "快適",
     "moist": "湿気のある",
-    "location_key": "位置",
+    "location_key": "冷蔵庫",
     "example_go_back_to_home": "例：ホームに戻る",
     "within_the_range_of": "範囲内で",
     "within": "内",
@@ -3993,7 +3993,7 @@
     "CL_CF_LG_receive_personalized_offers": "パーソナライズされたオファーを受け取る",
     "CL_CF_LG_receive_content": "目的と根拠は、マーケティング メッセージの送信を可能にしたり、お客様の興味に基づいてパーソナライズされたオファーを提示したり、ユーザー エクスペリエンスを向上させたりすることです。",
     "CL_CF_LG_contact": "上記の同意は、アカウント設定または次のメールアドレス privacy@connectlife.io に連絡することでいつでも撤回できることをご理解ください。",
-    "CL_CF_LG_legal": "法律上の",
+    "CL_CF_LG_legal": "法律",
     "CL_CF_LG_enduser_privacy": "データプライバシーポリシー",
     "CL_SM_CM_devices_are_running_eco_mode_key": "## 台のデバイスが ECO モードで動作しています",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
@@ -4078,12 +4078,12 @@
     "CL_DV_OV_2_trays": "トレイ2個",
     "CL_DV_OV_multi_tray": "マルチトレイ",
     "CL_DV_OV_multi": "マルチ",
-    "CL_DV_RF_ice_off": "アイスオフ",
+    "CL_DV_RF_ice_off": "製氷停止",
     "CL_DV_RF_ion_preservation": "ハイナノ",
     "CL_DV_RF_ai_energy": "AI省エネ",
     "CL_DV_RF_adaptive_temperature": "自己適応",
-    "CL_DV_RF_normal_ice_making": "通常の製氷",
-    "CL_DV_RF_quick_ice_making": "高速製氷",
+    "CL_DV_RF_normal_ice_making": "製氷",
+    "CL_DV_RF_quick_ice_making": "急速",
     "CL_DV_OV_extra_auto_programs": "自動プログラム",
     "CL_DV_OV_extra_auto_programs_desc": "事前に定義された自動プログラムのセット。自動プログラムは、選択した種類の食品や料理に最適な結果をもたらすのに役立ちます。",
     "CL_DV_OV_extra_browning_programs": "ブラウニングプログラム",
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "スマートサポートとは",
     "smart_support_l_m": "スマートサポートの主な機能の詳細",
     "smart_energy_helps": "スマートエネルギーは、デバイスを監視し、エネルギー効率の良い状態に保つのに役立ちます",
-    "smart_energy_helps_1": "1.ワンクリックエコ",
     "smart_energy_helps_1_content": "家電製品の ECO モードを有効にします。デバイスのエネルギー消費を統計的に分析します。省エネデータを監視し、エネルギー使用量の目標を設定します。",
     "smart_energy_helps_2": "2.エネルギー消費量の監視",
     "smart_energy_helps_2_content": "家全体の電力と水の消費量を日、月、年単位で計算します。また、個々のデバイスの消費統計、選択した期間内の各デバイスのエネルギー消費の割合、全体および個々のエネルギー消費量を表示することもできます。",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "キャビネットがローカルの無線ネットワークに接続されていることを確認してください。",
     "CL_DV_WM_offline_content3": "WiFiの信号強度をチェックしてください。信号が弱い場合は、ルーターがキャビネットから遠すぎる可能性があります。",
     "CL_DV_WM_offline_title": "デバイスがオフラインです",
-    "CL_CF_FM_create_recipe": "レシピを作成する"
+    "CL_CF_FM_create_recipe": "レシピを作成する",
+    "CL_DV_HOB_operation_interval": "運行間隔",
+    "CL_DV_WM_hot": "熱い",
+    "CL_DV_WM_extra_hot": "超ホット",
+    "CL_CF_HP_card": "カード",
+    "CL_CF_HP_enter_card_name": "カード名を入力してください...",
+    "smart_energy_helps_1": ""
 }
