--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Smart қолдау дегеніміз не",
     "smart_support_l_m": "Smart қолдау қызметінің негізгі мүмкіндіктері туралы көбірек біліңіз",
     "smart_energy_helps": "Smart Energy құрылғыларды бақылауға және энергияны үнемдейтін күйде ұстауға көмектеседі",
-    "smart_energy_helps_1": "1.Бір басу арқылы Эко",
     "smart_energy_helps_1_content": "Құрылғыларыңыздың белсенді ЭКО режимі. Құрылғының энергия тұтынуын статистикалық талдау. Қуатты үнемдеу деректерін бақылаңыз және қуатты пайдалану мақсатын орнатыңыз.",
     "smart_energy_helps_2": "2.Энергияны тұтынуды бақылау",
     "smart_energy_helps_2_content": "Күнделікті, айлық және жылдық негізде бүкіл үй қуаты мен суды тұтынуды есептеңіз. сонымен қатар жеке құрылғылардың тұтыну статистикасын, таңдалған кезеңдегі әрбір құрылғының қуат тұтыну үлесін, жалпы және жеке қуат тұтынуын көруге болады.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Шкафты жергілікті қосылғанын тексеріңіз.",
     "CL_DV_WM_offline_content3": "WiFi сигналының күшін тексеріңіз. Сигнал төмен болса, роутер шкафтан тым артық болуы мүмкін.",
     "CL_DV_WM_offline_title": "Құрылғыңыз желіден тыс",
-    "CL_CF_FM_create_recipe": "Рецепт жасау"
+    "CL_CF_FM_create_recipe": "Рецепт жасау",
+    "CL_DV_HOB_operation_interval": "Жұмыс аралығы",
+    "CL_DV_WM_hot": "Ыстық",
+    "CL_DV_WM_extra_hot": "Өте ыстық",
+    "CL_CF_HP_card": "Карта",
+    "CL_CF_HP_enter_card_name": "Карта атауын енгізіңіз...",
+    "smart_energy_helps_1": ""
 }
