--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Што е паметна поддршка",
     "smart_support_l_m": "Дознајте повеќе за клучните карактеристики на Smart Support",
     "smart_energy_helps": "Smart Energy ви помага да ги следите и одржувате уредите во енергетска ефикасна состојба",
-    "smart_energy_helps_1": "1. Еко со еден клик",
     "smart_energy_helps_1_content": "Активен ЕКО режим на вашите апарати. Статистички анализирајте ја потрошувачката на енергија на уредот. Следете ги податоците за заштеда на енергија и поставете цел за користење на енергија.",
     "smart_energy_helps_2": "2.Следење на потрошувачката на енергија",
     "smart_energy_helps_2_content": "Пресметајте ја потрошувачката на енергија и вода во целата куќа на дневна, месечна и годишна основа. исто така можете да ја видите статистиката за потрошувачка на поединечни уреди, процентот на потрошувачка на енергија на секој уред во избраниот период, вкупната и индивидуалната потрошувачка на енергија.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Внимавајте да вашиот шкаф е поврзан со локална безжична мрежа.",
     "CL_DV_WM_offline_content3": "Проверете ја силата на WiFi сигналот. Ако сигналот е слаб, можеби рутерот е премногу далеку од шкафот.",
     "CL_DV_WM_offline_title": "Вашиот уред е офлајн",
-    "CL_CF_FM_create_recipe": "Создадете рецепт"
+    "CL_CF_FM_create_recipe": "Создадете рецепт",
+    "CL_DV_HOB_operation_interval": "Работен интервал",
+    "CL_DV_WM_hot": "Топло",
+    "CL_DV_WM_extra_hot": "Екстра жешко",
+    "CL_CF_HP_card": "Картичка",
+    "CL_CF_HP_enter_card_name": "Внесете име на картичката...",
+    "smart_energy_helps_1": ""
 }
