--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Что такое Smart Support?",
     "smart_support_l_m": "Узнайте больше о ключевых функциях Smart Support",
     "smart_energy_helps": "Smart Energy помогает вам контролировать и поддерживать устройства в состоянии энергоэффективности.",
-    "smart_energy_helps_1": "1. Эко в один клик",
     "smart_energy_helps_1_content": "Активируйте режим ECO для ваших приборов. Статистически анализируйте потребление энергии устройствами. Отслеживайте данные по экономии энергии и устанавливайте целевые показатели потребления энергии.",
     "smart_energy_helps_2": "2. Мониторинг потребления энергии",
     "smart_energy_helps_2_content": "Рассчитайте потребление электроэнергии и воды во всем доме за день, месяц и год. Вы также можете просмотреть статистику потребления отдельными устройствами, долю потребления энергии каждым устройством за выбранный период, общее и индивидуальное потребление энергии.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Убедитесь, что ваш шкаф подключен к локальной беспроводной сети.",
     "CL_DV_WM_offline_content3": "Проверьте силу сигнала WiFi. Если сигнал слабый, возможно, роутер находится слишком далеко от шкафа.",
     "CL_DV_WM_offline_title": "Ваше устройство находится в автономном режиме",
-    "CL_CF_FM_create_recipe": "Создать рецепт"
+    "CL_CF_FM_create_recipe": "Создать рецепт",
+    "CL_DV_HOB_operation_interval": "Интервал работы",
+    "CL_DV_WM_hot": "Горячий",
+    "CL_DV_WM_extra_hot": "Очень горячо",
+    "CL_CF_HP_card": "Карточка",
+    "CL_CF_HP_enter_card_name": "Введите название карты...",
+    "smart_energy_helps_1": ""
 }
