--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Smart Support คืออะไร",
     "smart_support_l_m": "เรียนรู้เพิ่มเติมเกี่ยวกับคุณสมบัติหลักของ Smart Support",
     "smart_energy_helps": "Smart Energy ช่วยให้คุณตรวจสอบและรักษาอุปกรณ์ให้อยู่ในสถานะประหยัดพลังงาน",
-    "smart_energy_helps_1": "1.คลิกเดียว Eco",
     "smart_energy_helps_1_content": "โหมด ECO ของเครื่องใช้ไฟฟ้าของคุณ วิเคราะห์การใช้พลังงานของอุปกรณ์อย่างมีสถิติ ตรวจสอบข้อมูลการประหยัดพลังงานและกำหนดเป้าหมายการใช้พลังงาน",
     "smart_energy_helps_2": "2.การติดตามการใช้พลังงาน",
     "smart_energy_helps_2_content": "คำนวณการใช้ไฟฟ้าและน้ำของทั้งบ้านเป็นรายวัน รายเดือน และรายปี นอกจากนี้คุณยังสามารถดูสถิติการใช้ไฟฟ้าของแต่ละอุปกรณ์ สัดส่วนการใช้พลังงานของแต่ละอุปกรณ์ภายในระยะเวลาที่เลือก และการใช้พลังงานโดยรวมและแต่ละรายการได้อีกด้วย",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "ตรวจสอบว่าตู้ของคุณได้เชื่อมต่อกับเครือข่ายไร้สายในพื้นที่ท้องถิ่นหรือไม่",
     "CL_DV_WM_offline_content3": "ตรวจสอบความแรงของสัญญาณ WiFi ของคุณ หากสัญญาณอ่อนลง อาจเป็นเพราะเราเตอร์อยู่ห่างจากตู้ไก่ไก่",
     "CL_DV_WM_offline_title": "อุปกรณ์ของคุณออฟไลน์",
-    "CL_CF_FM_create_recipe": "สร้างสูตรอาหาร"
+    "CL_CF_FM_create_recipe": "สร้างสูตรอาหาร",
+    "CL_DV_HOB_operation_interval": "ระยะเวลาดำเนินการ",
+    "CL_DV_WM_hot": "ร้อน",
+    "CL_DV_WM_extra_hot": "พิเศษร้อน",
+    "CL_CF_HP_card": "การ์ด",
+    "CL_CF_HP_enter_card_name": "กรอกชื่อบัตร...",
+    "smart_energy_helps_1": ""
 }
