--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "Що таке Smart Support",
     "smart_support_l_m": "Дізнайтеся більше про ключові функції Smart Support",
     "smart_energy_helps": "Smart Energy допомагає контролювати та підтримувати пристрої в енергоефективному стані",
-    "smart_energy_helps_1": "1.One-Click Eco",
     "smart_energy_helps_1_content": "Активний ECO режим вашої техніки. Статистичний аналіз енергоспоживання пристрою. Відстежуйте дані про енергозбереження та встановлюйте цільове використання енергії.",
     "smart_energy_helps_2": "2. Моніторинг енергоспоживання",
     "smart_energy_helps_2_content": "Розрахуйте загальне споживання електроенергії та води в будинку на щоденній, місячній та річній основі. ви також можете переглянути статистику споживання окремих пристроїв, частку споживання енергії кожним пристроєм протягом вибраного періоду, загальне та індивідуальне споживання енергії.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "Переконайтеся, що ваш шафа підключена до місцевої бездротової мережі.",
     "CL_DV_WM_offline_content3": "Перевірте силу сигналу WiFi. Якщо сигнал слабкий, можливо, маршрутизатор знаходиться занадто далеко від шафи.",
     "CL_DV_WM_offline_title": "Ваш пристрій офлайн",
-    "CL_CF_FM_create_recipe": "Створити рецепт"
+    "CL_CF_FM_create_recipe": "Створити рецепт",
+    "CL_DV_HOB_operation_interval": "Інтервал роботи",
+    "CL_DV_WM_hot": "Гаряче",
+    "CL_DV_WM_extra_hot": "Дуже гарячий",
+    "CL_CF_HP_card": "картка",
+    "CL_CF_HP_enter_card_name": "Введіть назву картки...",
+    "smart_energy_helps_1": ""
 }
