--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4458,7 +4458,6 @@
     "w_i_smart_support": "پشتیبانی هوشمند چیست؟",
     "smart_support_l_m": "درباره ویژگی های کلیدی پشتیبانی هوشمند بیشتر بدانید",
     "smart_energy_helps": "Smart Energy به شما کمک می‌کند دستگاه‌ها را در وضعیت کارآمدی انرژی نظارت و نگه دارید",
-    "smart_energy_helps_1": "1.One-Click Eco",
     "smart_energy_helps_1_content": "حالت ECO فعال لوازم شما. تجزیه و تحلیل آماری مصرف انرژی دستگاه نظارت بر داده های صرفه جویی در انرژی و تعیین هدف مصرف انرژی.",
     "smart_energy_helps_2": "2. نظارت بر مصرف انرژی",
     "smart_energy_helps_2_content": "مصرف برق و آب کل خانه را به صورت روزانه، ماهانه و سالانه محاسبه کنید. همچنین می توانید آمار مصرف هر دستگاه، نسبت مصرف انرژی هر دستگاه در دوره انتخابی، مصرف انرژی کلی و فردی را مشاهده کنید.",
@@ -4606,5 +4605,11 @@
     "CL_DV_WM_offline_content2": "مطمئن شوید که کابینت شما به یک شبکه بی سیم محلی متصل است.",
     "CL_DV_WM_offline_content3": "قدرت سیگنال WiFi خود را بررسی کنید. اگر سیگنال ضعیف است، ممکن است روتر از کابینت خیلی دور باشد.",
     "CL_DV_WM_offline_title": "دستگاه شما آفلاین است",
-    "CL_CF_FM_create_recipe": "دستور پخت را ایجاد کنید"
+    "CL_CF_FM_create_recipe": "دستور پخت را ایجاد کنید",
+    "CL_DV_HOB_operation_interval": "فاصله عملیات",
+    "CL_DV_WM_hot": "داغ",
+    "CL_DV_WM_extra_hot": "فوق العاده داغ",
+    "CL_CF_HP_card": "کارت",
+    "CL_CF_HP_enter_card_name": "نام کارت را وارد کنید...",
+    "smart_energy_helps_1": ""
 }
